--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="index.html"">NeverTooLateToAutomate.com.pl</a>
+      <a class="navbar-brand" href="index.html"">NeverTooLateToAutomate</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -52,9 +52,8 @@
 		<!--<li><a href="#section1">Start</a></li>-->
         <li><a href="#section2">VBA macros</a></li>
 		<li><a href="index2.html">SQL queries</a></li>
-        <li class="visible-xs-block visible-sm-block"><a href="#section3">About</a></li>
+        <li class="visible-xs-block"><a href="#section3">Contact</a></li><!--visible-sm-block-->
       </ul>
-
     </div>
   </div>
 </nav>
@@ -76,6 +75,34 @@
 	<div class="container">
 
 		<div class="row">
+		
+		
+
+	<!--	
+<div class="col-xs-12 col-sm-12 hidden-md hidden-lg hidden-xl">
+
+<h4>
+
+<p>Are you a beginner in the complex world of VBA macros?
+
+Or have you made the first move and it is time to quicken your pace?
+
+Perhaps you need a set of useful macros at hand?</p>
+
+<p>If answer to any of these questions is yes, then you've got to the right place.
+
+On this website, you will find a bunch of codes ready to be pasted in your Excel file.</p>
+
+<p>It is never too late to automate!</p>
+
+</h4>
+
+</div>
+-->
+
+
+
+		
 	
 			<div class="col-md-9">
 
@@ -108,6 +135,17 @@
 <h2>Choose macro from the list and click Run.</h2>
 
 <img src="macro.png" class="img-responsive" alt="">
+
+		<div class="visible-xs-block visible-sm-block">
+
+			<h1>Quick Navigation:</h1>
+			
+<h4><b><a href="#range">Range</a></b></h4>
+<h4><b><a href="#Worksheet">Worksheet</a></b></h4>
+<h4><b><a href="#Workbook">Workbook</a></b></h4>
+<h4><b><a href="#Other">Other</a></b></h4>
+		
+		</div>
 
 <br>
 
@@ -1768,9 +1806,9 @@
 
 </div>
 
-<br>
 
-<br>
+
+
 
 
 
@@ -1908,58 +1946,38 @@ On this website, you will find a bunch of codes ready to be pasted in your Excel
 
 
 
-<div id="section3" class="">
+<div id="section3" class="hidden-md hidden-lg hidden-xl">
 
-<div class="col-xs-12 col-sm-4 hidden-md hidden-lg hidden-xl">
+<div id="" class="inner">
+
+<h1>Contact</h1>
+
+<div class="col-xs-12 col-sm-5 hidden-md hidden-lg hidden-xl">
 
 <img src="Photo.png" class="img-responsive" alt="Photo of Piotr Janus">
 
 </div>
 
-<div class="col-xs-12 col-sm-8 hidden-md hidden-lg hidden-xl">
-
-
+<div class="col-xs-12 col-sm-7 hidden-md hidden-lg hidden-xl">
 
 <h4>
 
-<p>Are you a beginner in the complex world of VBA macros?
+<p>Hi,</p>
 
-Or have you made the first move and it is time to quicken your pace?
+<!--I believe that playing with VBA can give you a lot of fun. Moreover, it may be useful in your professional career. Perhaps not everyone may have a knack for macros but everyone can profit from it.-->
 
-Perhaps you need a set of useful macros at hand?</p>
+<p>On my website I have gathered macros that I have developed and SQL queries that I have used throughout my career of an analyst and consultant in financial institutions. I would like to invite you to explore the content of the site.</p>
 
-<p>If answear to any of these questions is yes, then you've got to the right place.
-
-On this website, you will find a bunch of codes ready to be pasted in your Excel file.</p>
-
-<p>It is never too late to automate!</p>
-
-<p>To contact me:</p>
+<p>Remember that it is never to late to automate!</p>
 
 <!--mail--><a href="mailto:piotrjanus@outlook.com?Subject=Hi Piotr" style="color: #0e5051" target="_top">piotrjanus@outlook.com</a>
 
 <!--Linkedin--><a href="https://pl.linkedin.com/in/januspiotr"><img src="In-2C-28px-TM.png" align="right" style="margin-right: 0px; margin-left: 0px; padding-top: px;"></a>
 
-</h4>
-
-
-
-<!--
-	<div class="grey-bg container-fluid">
-		<div class="row slideanim" id="counter">
-			<div class="counter-Txt"><h5>Currently available on the website</h5><h5><span class="counter-value" data-count="62">0</span></h5><h5>VBA macros</h5></div>
-		</div>
-	</div>
--->
+<h4/>
 
 </div>
-
-
-
-
-
 </div>
-
 </div>
 
 
@@ -2083,7 +2101,7 @@ $(window).scroll(function() {
 		<div class="container">
 			<div class="row" style="height: 55px">
 				<div class="col-xs-12" style="color: #FFFFFF";>
-					<h3><p align="right">Copyright &copy; 2017 Piotr Janus</p></h3 >
+					<h3><p align="right">Copyright &copy; 2018 Piotr Janus</p></h3 >
 				</div>
 			</div>
 		</div>
