--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="index2.html"">NeverTooLateToAutomate.com.pl</a>
+      <a class="navbar-brand" href="index2.html"">NeverTooLateToAutomate</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -52,7 +52,7 @@
 		<!--<li><a href="#section1">Start</a></li>-->
         <li><a href="#section2">SQL queries</a></li>
 		<li><a href="index.html">VBA macros</a></li>
-        <li class="visible-xs-block visible-sm-block"><a href="#section3">About</a></li>
+        <li class="visible-xs-block"><a href="#section3">Contact</a></li><!--visible-sm-block-->
       </ul>
 
     </div>
@@ -76,7 +76,31 @@
 	<div class="container">
 
 		<div class="row">
-	
+		
+		
+	<!--	
+<div class="col-xs-12 col-sm-12 hidden-md hidden-lg hidden-xl">
+
+<h4>
+
+<p>Are you a beginner in the complex world of VBA macros?
+
+Or have you made the first move and it is time to quicken your pace?
+
+Perhaps you need a set of useful macros at hand?</p>
+
+<p>If answer to any of these questions is yes, then you've got to the right place.
+
+On this website, you will find a bunch of codes ready to be pasted in your Excel file.</p>
+
+<p>It is never too late to automate!</p>
+
+</h4>
+
+</div>
+-->	
+
+
 			<div class="col-md-9">
 
 				<div class="dashed">
@@ -117,9 +141,28 @@
 
 <img src="sqlserver3.png" class="img-responsive" alt="">
 
+		
+
+		<div class="visible-xs-block visible-sm-block">
+
+		<h1>Quick Navigation:</h1>
+		
+		
+<h4><a href="#SELECT">SELECT</a></h4>
+<h4><a href="#PLUS_MINUS">Operators +, -, *, /</a></h4>
+<h4><a href="#WHERE">WHERE</a></h4>
+<h4><a href="#Null_Values">Null Values</a></h4>
+<h4><a href="#JOINS">JOINS</a></h4>
+
+			</div>
+			
+		</div>
+		
+
+		
 <br>
 
-					</div>
+					
 
 				</div>
 
@@ -5811,60 +5854,38 @@ On this website, you will find a bunch of SQL queries which will guide you how t
 
 
 
-<div id="section3" class="">
+<div id="section3" class="hidden-md hidden-lg hidden-xl">
 
-<div class="col-xs-12 col-sm-4 hidden-md hidden-lg hidden-xl">
+<div id="" class="inner">
+
+<h1>Contact</h1>
+
+<div class="col-xs-12 col-sm-5 hidden-md hidden-lg hidden-xl">
 
 <img src="Photo.png" class="img-responsive" alt="Photo of Piotr Janus">
 
 </div>
 
-<div class="col-xs-12 col-sm-8 hidden-md hidden-lg hidden-xl">
-
-
+<div class="col-xs-12 col-sm-7 hidden-md hidden-lg hidden-xl">
 
 <h4>
 
 <p>Hi,</p>
 
-<!--<p>My name is Piotr Janus.</p>-->
+<!--I believe that playing with VBA can give you a lot of fun. Moreover, it may be useful in your professional career. Perhaps not everyone may have a knack for macros but everyone can profit from it.-->
 
-<p>Would you like to learn how to search for information in a robust database?
+<p>On my website I have gathered macros that I have developed and SQL queries that I have used throughout my career of an analyst and consultant in financial institutions. I would like to invite you to explore the content of the site.</p>
 
-Do you feel that as an analyst know how to use SQL is a must-have? Perhaps you simply want to learn something new?</p>
-
-<p>If answer to any of these questions is yes, then you've got to the right place. 
-
-On this website, you will find a bunch of SQL queries which will guide you how to find information in any database.</p>
-
-<p>It is never too late to automate!</p>
-
-<p>To contact me:</p>
+<p>Remember that it is never to late to automate!</p>
 
 <!--mail--><a href="mailto:piotrjanus@outlook.com?Subject=Hi Piotr" style="color: #0e5051" target="_top">piotrjanus@outlook.com</a>
 
 <!--Linkedin--><a href="https://pl.linkedin.com/in/januspiotr"><img src="In-2C-28px-TM.png" align="right" style="margin-right: 0px; margin-left: 0px; padding-top: px;"></a>
 
-</h4>
-
-
-
-<!--
-	<div class="grey-bg container-fluid">
-		<div class="row slideanim" id="counter">
-			<div class="counter-Txt"><h5>Currently available on the website</h5><h5><span class="counter-value" data-count="62">0</span></h5><h5>VBA macros</h5></div>
-		</div>
-	</div>
--->
+<h4/>
 
 </div>
-
-
-
-
-
 </div>
-
 </div>
 
 
