--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@ On this website, you will find a bunch of codes ready to be pasted in your Excel
 
 			<h1>Quick Navigation:</h1>
 			
-<h4><b><a href="#range">Range</a></b></h4>
-<h4><b><a href="#Worksheet">Worksheet</a></b></h4>
-<h4><b><a href="#Workbook">Workbook</a></b></h4>
-<h4><b><a href="#Other">Other</a></b></h4>
+<h4><b><a href="#Calculate">Range</a></b></h4>
+<h4><b><a href="#AscWs">Worksheet</a></b></h4>
+<h4><b><a href="#CalculateAuto">Workbook</a></b></h4>
+<h4><b><a href="#CloseAllWb">Other</a></b></h4>
 		
 		</div>
 
