--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ http://access-excel.tips/access-vba-cocmd-transferspreadsheet/</h2>
 </div>
 </div>
 
-
+<!--
 <div id="Calculate" class="macroouter">
 <h1>Import to Access 1 oRs</h1>
 <h2>Descr.</h2>
@@ -425,7 +425,7 @@ http://access-excel.tips/access-vba-cocmd-transferspreadsheet/</h2>
 <h6>code</h6>
 </div>
 </div>
-
+-->
 
 <div id="importMSsqlserver" class="macroouter">
 <h1>MS Sql Server</h1>
@@ -3305,9 +3305,9 @@ On this website, you will find a bunch of codes ready to be pasted in your Excel
 <h4><a href="#">Export from Access 3 oRs</a></h4>
 <h4><a href="#">Export from Access 4 DoCmd</a></h4>
 <h4><a href="#">Loop Through Recordset</a></h4>
-<h4><a href="#">Import to Access 1 oRs</a></h4>
+<!--<h4><a href="#">Import to Access 1 oRs</a></h4>
 <h4><a href="#">Import to Access 2 Sql</a></h4>
-<h4><a href="#">Import to Access 3 DoCmd</a></h4>
+<h4><a href="#">Import to Access 3 DoCmd</a></h4>-->
 <br>
 
 <h4><b><a href="#access">MS Sql Server</a></b></h4>
